<resources>
    <string name="app_name">PopularMovies</string>
    <string name="movie_details">Movie Details</string>

    <string name="movie_title_label">Movie Title</string>
    <string name="release_date_label">Release Date - </string>
    <string name="user_rating_label">User Rating - </string>
    <string name="error_message">An error has occurred. Please try again!!</string>

    <string name="sort_title">Sort Order</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="fav_button_text">Favorite Movie</string>
    <string name="mark_as_favorite">Mark as Favorite</string>

    <string name="trailer1_text">Trailer 1</string>
    <string name="trailer2_text">Trailer 2</string>
    <string name="trailer3_text">Trailer 3</string>
    <string name="no_trailer_found">No Trailers found for this movie</string>
    <string name="no_review_found">No reviews found for this movie</string>
    <string name="trailer_label">Trailer:</string>
    <string name="review_label">Reviews:</string>
    <string name="review_author">By: Somebody</string>

</resources>
