<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/title_header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_detail_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/movie_title_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/movieTitleText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_header"
            app:layout_constraintStart_toStartOf="@+id/title_header" />

        <ImageView
            android:id="@+id/iv_detail_movie_img"
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/title_header"
            app:layout_constraintTop_toBottomOf="@+id/title_header" />

        <TextView
            android:id="@+id/tv_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/title_header" />

        <TextView
            android:id="@+id/tv_detail_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/tv_detail_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date" />

        <Button
            android:id="@+id/fav_movie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/notfavMovieColor"
            android:text="@string/mark_as_favorite"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textAllCaps="true"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_detail_user_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_user_rating" />

        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/iv_detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_movie_img" />

        <View
            android:id="@+id/viewTrailerSeperator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_overview" />

        <TextView
            android:id="@+id/tv_trailer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailer_label"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTrailerSeperator" />

        <Button
            android:id="@+id/trailer1_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/play_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trailer_label" />

        <TextView
            android:id="@+id/tv_trailer1__label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/trailer1_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/trailer1_btn"
            app:layout_constraintLeft_toRightOf="@+id/trailer1_btn"
            app:layout_constraintTop_toBottomOf="@+id/trailer1_btn" />

        <TextView
            android:id="@+id/tv_trailer_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_trailer_found"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_trailer_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/viewTrailer3Divider"/>

        <View
            android:id="@+id/viewTrailer1Divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trailer1__label" />

        <Button
            android:id="@+id/trailer2_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/play_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTrailer1Divider" />

        <TextView
            android:id="@+id/tv_trailer2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/trailer2_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/trailer2_btn"
            app:layout_constraintLeft_toRightOf="@+id/trailer2_btn"
            app:layout_constraintTop_toBottomOf="@+id/trailer2_btn" />

        <View
            android:id="@+id/viewTrailer2Divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trailer2_label" />


        <Button
            android:id="@+id/trailer3_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/play_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTrailer2Divider" />

        <TextView
            android:id="@+id/tv_trailer3_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/trailer3_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/trailer3_btn"
            app:layout_constraintLeft_toRightOf="@+id/trailer3_btn"
            app:layout_constraintTop_toBottomOf="@+id/trailer3_btn" />

        <View
            android:id="@+id/viewTrailer3Divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trailer3_label" />

        <TextView
            android:id="@+id/tv_review_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/review_label"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTrailer3Divider" />

        <TextView
            android:id="@+id/tv_review_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_review_found"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/tv_review_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_review1_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/review_author"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_review_label"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_review1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text=""
            android:textAlignment="textStart"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_review1_author" />

        <View
            android:id="@+id/viewReview1Divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_review1" />

        <TextView
            android:id="@+id/tv_review2_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/review_author"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/viewReview1Divider"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_review2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text=""
            android:textAlignment="textStart"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_review2_author"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <View
            android:id="@+id/viewReview2Divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_review2" />

        <TextView
            android:id="@+id/tv_review3_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/review_author"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/viewReview2Divider"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <TextView
            android:id="@+id/tv_review3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="16dp"
            android:text=""
            android:textAlignment="textStart"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_review3_author"
            app:layout_constraintLeft_toLeftOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>

